alterado xml do tvshow

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -72,7 +72,7 @@
     <string name="sem_biografia">Sem Biografia</string>
     <string name="sem_filmes">Sem Filmes</string>
     <string name="sem_fotos">Sem Fotos</string>
-    <string name="temporadas">Temporadas</string>
+    <string name="temporadas">Temporadas:</string>
     <string name="informacoes">Informações</string>
     <string name="status">Status:</string>
     <string name="temporada">"Temporada: "</string>
