--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -141,7 +141,7 @@
     <string name="subtitle_intro_5">Crea tu login y disfruta</string>
     <string name="tempo_nao_informado">Tiempo N / A</string>
     <string name="temporada">"Temporada: "</string>
-    <string name="temporadas">Temporadas</string>
+    <string name="temporadas">Temporadas:</string>
     <string name="text_logoff_dialog">Después de cerrar la sesión, no será posible interactuar con la aplicación.</string>
     <string name="title_delete">Dejar de seguir el programa de televisión?</string>
     <string name="title_intro_1">PopCorn Show</string>
