finalizada tela de tvshow

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -188,4 +188,6 @@
     <string name="sem_informacao_company">No hay información de la Compañía</string>
     <string name="tvshow_rated">Serie Clasificada</string>
     <string name="permitir_acesso_armazenamento">Para salvar imagem  é necessario permitir acesso a meoria interna.</string>
+    <string name="proximo_ep">Proximo Ep:</string>
+    <string name="ultimo_ep">Último Ep:</string>
 </resources>
