--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -14,14 +14,10 @@
     <string name="bt_desativar">Desactivar Cuenta</string>
     <string name="bt_reset_password">Restablecer la contraseña</string>
     <string name="bt_signin">Registrarse</string>
-    <string name="budget">Presupuesto</string>
-    <string name="calendar">Calendario</string>
     <string name="cancel">Cancelar</string>
     <string name="canceled">Cancelado</string>
     <string name="classificar">Clasificarse</string>
-    <string name="collecion_off">Ninguna colección</string>
     <string name="compartilhar_filme">Compartir película</string>
-    <string name="compartilhar_tvshow">Compartir programas de televisión</string>
     <string name="configuracoes">Ajustes</string>
     <string name="conta_deletada">Cuenta eliminada</string>
     <string name="criado">Creado por:</string>
@@ -41,7 +37,6 @@
     <string name="excluir_filme">Eliminar película?</string>
     <string name="excluir_tvshow">Eliminar programas de televisión?</string>
     <string name="falha_delete_conta">Error al intentar eliminar la cuenta. Debe haber iniciado sesión recientemente en este proceso.</string>
-    <string name="falha_rated">Clasificación de fallas</string>
     <string name="falha_reset_senha">No se pudo cambiar la contraseña. Inténtalo de nuevo antes de intentarlo.</string>
     <string name="favorite">Favoritos</string>
     <string name="fazer_login">Login</string>
@@ -73,9 +68,7 @@
     <string name="new_segiundo">Nuevo</string>
     <string name="no">No</string>
     <string name="no_budget">No hay información presupuestaria</string>
-    <string name="no_epsodio">Sin nombre</string>
     <string name="no_internet">Sin Internet</string>
-    <string name="no_message">Sin comentarios</string>
     <string name="no_site">No Sitio Oficial</string>
     <string name="no_vote">Sin voto</string>
     <string name="nota">Nota:</string>
@@ -92,20 +85,16 @@
     <string name="password">Contraseña</string>
     <string name="person">Perfil</string>
     <string name="person_rated">Gente Popular</string>
-    <string name="person_vote">La gente votó</string>
-    <string name="pesquisar_internet">En Google Play</string>
     <string name="popularity">Popularidad:</string>
     <string name="por_tras_camera_filme">Produccion de pelicula</string>
     <string name="por_tras_camera_tvshow">Producción Tvshow</string>
     <string name="poster_filme">Cartel de la película</string>
-    <string name="procurar">Buscar</string>
     <string name="producao">Producción</string>
     <string name="production_countries">País Productor:</string>
     <string name="produtora">Desarrollador:</string>
     <string name="proximos">Próximo</string>
     <string name="quero_assistir">Quiero ver</string>
     <string name="rated_googleplay">Revisión en Google Play.</string>
-    <string name="recomendacao">Recomendación</string>
     <string name="remover_favorite">Remover de favoritos</string>
     <string name="remover_rated">Eliminar de Clasificados</string>
     <string name="remover_watch">Eliminar de la lista de observación</string>
@@ -115,7 +104,6 @@
     <string name="retry">Repetir</string>
     <string name="returnin_series">Renovado</string>
     <string name="sair">Salir</string>
-    <string name="salvando">Ahorro...</string>
     <string name="search">Buscar</string>
     <string name="search_empty">No hay resultados de la búsqueda</string>
     <string name="seguindo">Siguiendo</string>
@@ -132,9 +120,6 @@
     <string name="sem_tvshow">No hay espectáculo</string>
     <string name="similares">Similar</string>
     <string name="spoken_languages">Idioma original:</string>
-    <string name="star_avaliados">Evaluación</string>
-    <string name="status">Estado:</string>
-    <string name="suas_listas">Tus listas</string>
     <string name="subtitle_intro_1">Bienvenido a las palomitas Mostrar.\n\nEcha un vistazo a las últimas noticias</string>
     <string name="subtitle_intro_2">Varios enlaces a sitios de todo el mundo hablando de la película / tvshow</string>
     <string name="subtitle_intro_3">Nuestro sistema ahora puede realizar un seguimiento de la tvshow película o artista en este catálogo de Netflix</string>
@@ -145,7 +130,6 @@
     <string name="text_logoff_dialog">Después de cerrar la sesión, no será posible interactuar con la aplicación.</string>
     <string name="title_delete">Dejar de seguir el programa de televisión?</string>
     <string name="title_intro_1">PopCorn Show</string>
-    <string name="title_intro_2">Noticias</string>
     <string name="title_intro_3">Siguiendo</string>
     <string name="title_logoff_dialog">Salir delPopCorn Show?</string>
     <string name="toast_salvar_imagem">Imagen guardada en la carpeta de la aplicación</string>
@@ -154,22 +138,17 @@
     <string name="tvshow">Tv Shows</string>
     <string name="tvshow_add_favorite">Tvshow añadido a Favoritos</string>
     <string name="tvshow_nao_lancado">Tvshow aún no ha sido lanzado</string>
-    <string name="tvshow_ep_rated">Epsodio clasificado</string>
     <string name="tvshow_remove_favorite">Tvshow eliminado de la lista de favoritos</string>
     <string name="tvshow_remove_rated">Nota eliminada de Tvshow</string>
     <string name="tvshow_watch_remove">Tvshow eliminado de la lista de seguimiento</string>
     <string name="ver_imdb">Véase IMDB</string>
-    <string name="usuario">TMDB del usuario</string>
     <string name="upcoming">Próximamente</string>
-    <string name="ver_no_app">Véase PopCorn</string>
     <string name="ver_tmdb">Véase TMDB</string>
     <string name="vincular_login_popcorn">Enlace a otro inicio de sesión</string>
     <string name="vote_average">Votar Promedio</string>
     <string name="writer">Escrito</string>
     <string name="populares">Populares</string>
     <string name="minutos">mins</string>
-    <string name="ver_netflix">Véase Netflix</string>
-    <string name="procurar_netflix">Netflix</string>
     <string name="alerta_spoiler">Advertencia</string>
     <string name="msg_spoiler">Estos enlaces pueden contener SPOILERS</string>
     <string name="empty_favorites">Sin Favorita</string>
@@ -182,12 +161,11 @@
     <string name="ops_seguir_novamente">Vaya. Algo salió mal. Si persiste, intente seguir la serie de nuevo.</string>
     <string name="title_marcar_ep_anteriores">Marcos episodios anteriores como se ve?</string>
     <string name="msg_marcar_ep_anteriores">Todos los episodios anteriores serán marcados como se ve.</string>
-    <string name="numero_de_episodios">Número de episodios</string>
     <string name="nao_visto">No visto</string>
     <string name="atualizar" >Nuevo</string>
     <string name="sem_informacao_company">No hay información de la Compañía</string>
     <string name="tvshow_rated">Serie Clasificada</string>
-    <string name="permitir_acesso_armazenamento">Para salvar imagem  é necessario permitir acesso a meoria interna.</string>
+    <string name="permitir_acesso_armazenamento">Para salvar imagem  é necessario permitir acesso a memoria interna.</string>
     <string name="proximo_ep">Proximo Ep:</string>
     <string name="ultimo_ep">Último Ep:</string>
 </resources>
