--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -194,4 +194,5 @@
     <string name="site" translatable="false">site</string>
     <string name="proximo_ep">Next Ep:</string>
     <string name="ultimo_ep">Last Ep:</string>
+    <string name="show" translatable="false">Show</string>
 </resources>
