--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,7 +4,7 @@
     <string name="adicionar_favorite">Agregar a los favoritos</string>
     <string name="adicionar_rated">Añadir a los Anuncios</string>
     <string name="adicionar_watch">Añadir a Ver Después</string>
-    <string name="air_date">En el aire</string>
+    <string name="air_date">En el aire:</string>
     <string name="ajuda_desenvolvimento">Desarrollo</string>
     <string name="anonimo_alerta">Este tipo de inicio de sesión no es seguro. Puede perder todo si la aplicación falla. Recomendamos crear un inicio de sesión.</string>
     <string name="anonymous">Anónimo</string>
@@ -24,7 +24,7 @@
     <string name="criar_login_popcorn">Crear inicio de sesión PopCorn</string>
     <string name="deletar_conta">Borrar cuenta?</string>
     <string name="deletar_conta_txt">Desea eliminar su cuenta? Ha perdido toda la información de la cuenta. No será posible recuperarse.</string>
-    <string name="director">Dirigido</string>
+    <string name="director">Dirigido: </string>
     <string name="elenco">Emitir</string>
     <string name="em_breve">Próximamente</string>
     <string name="email_invalido">Email inválido</string>
@@ -144,8 +144,9 @@
     <string name="upcoming">Próximamente</string>
     <string name="ver_tmdb">Véase TMDB</string>
     <string name="vincular_login_popcorn">Enlace a otro inicio de sesión</string>
-    <string name="vote_average">Votar Promedio</string>
+    <string name="vote_average">Votar Promedio:</string>
     <string name="writer">Escrito</string>
+    <string name="writer_reverse">:Escrito</string>
     <string name="populares">Populares</string>
     <string name="minutos">mins</string>
     <string name="alerta_spoiler">Advertencia</string>
