--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -75,7 +75,7 @@
     <string name="notificacao">Notificación</string>
     <string name="notificacao_summary">Obtener la notificación</string>
     <string name="nova_senha">Nueva Contraseña</string>
-    <string name="novidades_text">** Sus evaluaciones ahora se envían al TMDB. \n\n (Con grandes poderes viene grandes responsabilidades) \n\n ** Búsqueda ahora trae imagen en la búsqueda **</string>
+    <string name="novidades_text">** Nueva apariencia \n\n Componentes actualizados **</string>
     <string name="novidades_title">Noticias</string>
     <string name="now_playing">Jugando ahora</string>
     <string name="ops">Oops! algo mal</string>
