--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -164,7 +164,7 @@
     <string name="notificacao_summary">Receber Notificação</string>
     <string name="ajuda_desenvolvimento">Desenvolvimento</string>
     <string name="novidades_title">Novidades</string>
-    <string name="novidades_text">** Suas avaliações agora são enviadas ao TMDB. \n\n (Com grandes poderes vem grandes responsabilidades)\n\n ** Pesquisa agora traz imagem na busca ** </string>
+    <string name="novidades_text">** Novo visual \n\n Componentes atualizados ** </string>
     <string name="person">Perfil</string>
     <string name="populares">Populares</string>
     <string name="alerta_spoiler">Atenção</string>
