--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -75,7 +75,7 @@
 
     <string name="writer">Escrito:</string>
     <string name="writer_reverse">:Escrito</string>
-    <string name="air_date">Passando na TV</string>
+    <string name="air_date">Passando na TV:</string>
     <string name="vote_average">Votos:</string>
 
     <string name="classificar">Classificar</string>
