--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -163,7 +163,7 @@
     <string name="notificacao_summary">Receber Notificação</string>
     <string name="ajuda_desenvolvimento">Desenvolvimento</string>
     <string name="novidades_title">Novidades</string>
-    <string name="novidades_text">** Novo visual \n\n Componentes atualizados ** </string>
+    <string name="novidades_text">** Novo visual - Mais Cores! \n\n Alguns (só alguns) buns arrumados \n\n Componentes atualizados ** </string>
     <string name="person">Perfil</string>
     <string name="populares">Populares</string>
     <string name="alerta_spoiler">Atenção</string>
