--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -76,6 +76,7 @@
     <string name="writer">Escrito:</string>
     <string name="writer_reverse">:Escrito</string>
     <string name="air_date">Passando na TV:</string>
+    <string name="air_date_main">Passando na TV</string>
     <string name="vote_average">Votos:</string>
 
     <string name="classificar">Classificar</string>
@@ -196,5 +197,6 @@
     //////////
 
     <string name="cd_collectons">Veja os filmes das franquia</string>
+    <string name="stream_avaliable">Stream Disponivel</string>
 
 </resources>
