--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,7 +215,15 @@
 
     <string name="bar_ten" translatable="false">%s/10</string>
     <string name="bar_hundred" translatable="false">%s/100</string>
-    <string name="stream_avaliable">Aonde assistir</string>
+
+
+    ///////////////
+    ///// Stream
+    //////////////
+    <string name="stream_avaliable">Where to watch the movie</string>
+    <string name="stream" translatable="false">Stream</string>
+    <string name="rent">Rent</string>
+    <string name="purchase">Purchase</string>
 
 
 </resources>
