adicionado warining de beta no stream

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -224,6 +224,7 @@
     <string name="stream" translatable="false">Stream</string>
     <string name="rent">Rent</string>
     <string name="purchase">Purchase</string>
+    <string name="beta" translatable="false">beta</string>
 
 
 </resources>
