--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -200,5 +200,6 @@
     <string name="stream_avaliable">Onde assistir o filme</string>
     <string name="rent">Alugar</string>
     <string name="purchase">Comprar</string>
+    <string name="valid_us">Válido para USA</string>
 
 </resources>
