alterado texto de novidades

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,7 +169,7 @@
     <string name="ajuda_desenvolvimento">Development</string>
     <string name="twitter_text" translatable="false">Twitter</string>
     <string name="novidades_title">News</string>
-    <string name="novidades_text">** New look - More colors! \n\n Some (just some) fix bugs \n\n Updated components **</string>
+    <string name="novidades_text">** Now you can know where to watch such a movie **\n\n Enhanced image quality \n\n Some (just some) fix bugs \n\n Updated components **</string>
     <string name="homepage" translatable="false">Homepager</string>
     <string name="alerta_spoiler">Warning</string>
     <string name="msg_spoiler">These links may contain SPOILERS</string>
