fix stream para listas vazias

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,7 +106,7 @@
     <string name="tvshow_add_favorite">Tvshow added to Favorites</string>
     <string name="tvshow_nao_lancado">Tvshow not yet released</string>
     <string name="tvshow_remove_favorite">Tvshow removed from the Favorites list</string>
-    <string name="upcoming">Coming soon</string>
+    <string name="upcoming">Coming Soon</string>
     <string name="ver_imdb">See IMDB</string>
     <string name="ver_tmdb">See TMDB</string>
     <string name="vote_average">Vote Average:</string>
