alterado layout da introdução e frases

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -121,8 +121,9 @@
     <string name="similares">Similar</string>
     <string name="spoken_languages">Idioma original:</string>
     <string name="subtitle_intro_1">Bienvenido a las palomitas Mostrar\n\n<b>Esta aplicación no reproduce películas o series. Es un centro de información</b></string>
-    <string name="subtitle_intro_2">Varios enlaces a sitios de todo el mundo hablando de la película / tvshow</string>
+    <string name="subtitle_intro_2">Tenemos enlaces al servicio de transmisión. \n¡A disfrutar!</string>
     <string name="subtitle_intro_5">Crea tu login y disfruta</string>
+    <string name="enjoy">Disfrutar</string>
     <string name="tempo_nao_informado">Tiempo N / A</string>
     <string name="temporada">"Temporada: "</string>
     <string name="temporadas">Temporadas:</string>
