--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -20,6 +20,7 @@
     <string name="spoken_languages">Idioma Original:</string>
     <string name="popularity">Popularidade:</string>
     <string name="original_title">Titulo Original:</string>
+    <string name="know_for">conhecido por:</string>
     <string name="elenco">Elenco</string>
     <string name="search">Procurar</string>
     <string name="search_empty">Busca sem Resultado</string>
