--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -174,6 +174,7 @@
     <string name="view_more">VER MÁS</string>
     <string name="score">"NOTA: "</string>
     <string name="vote">"VOTOS: "</string>
+    <string name="know_for">conocido por:</string>
     <string name="directo_label">Director</string>
     <string name="cd_collectons">Ver películas de franquicia</string>
     <string name="poster_empty">sin una lista de carteles</string>
