--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -200,6 +200,7 @@
     <string name="view_more">View More</string>
     <string name="score">SCORE: </string>
     <string name="vote">VOTES: </string>
+    <string name="know_for">know for:</string>
     <string name="directo_label">Director</string>
     <string name="two_minus" translatable="false">--</string>
     <string name="poster_empty">without a list of posters</string>
