--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -61,7 +61,7 @@
     <string name="filme_add_watchlist">Adicionado ao \"Ver depois\"</string>
     <string name="filme_remove">Filme removido</string>
     <string name="imagem_person">Fotos</string>
-    <string name="apelido">Apelido: </string>
+    <string name="apelido">Apelidos: </string>
     <string name="sem_biografia">Sem Biografia</string>
     <string name="sem_filmes">Sem Filmes</string>
     <string name="sem_fotos">Sem Fotos</string>
@@ -204,5 +204,6 @@
     <string name="rent">Alugar</string>
     <string name="purchase">Comprar</string>
     <string name="valid_us">Válido para USA</string>
+    <string name="wiki">Wikipidia</string>
 
 </resources>
