--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -66,6 +66,7 @@
     <string name="sem_filmes">Sem Filmes</string>
     <string name="sem_fotos">Sem Fotos</string>
     <string name="temporadas">Temporadas:</string>
+    <string name="temporadas_tv">Temporadas</string>
     <string name="informacoes">Informações</string>
     <string name="temporada">"Temporada: "</string>
     <string name="nota">Nota:</string>
