--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,6 +99,7 @@
     <string name="tempo_nao_informado">Time N/A</string>
     <string name="temporada">Season: </string>
     <string name="temporadas">Seasons:</string>
+    <string name="temporadas_tv">Seasons</string>
     <string name="text_logoff_dialog">After logging out, it will not be possible to interact with the application.</string>
     <string name="title_logoff_dialog">Log out of PopCorn Show?</string>
     <string name="toast_salvar_imagem">Image saved in the folder of the application</string>
